# war-trance

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
examples/: animated_fox.rs  animation.rs  graph.rs  main_menu.rs
src/: lib.rs  main.rs  mainsies.rs
src/agent/: agent_bundle.rs  agent_tree.rs  mod.rs
src/ai/: agent_tree.rs  health.rs  mod.rs  ranged_attack.rs  seek.rs  seek_enemy.rs  seek_healer.rs  team.rs  velocity.rs
src/animation/: mod.rs  play_animation.rs
src/app/: app_plugin.rs  app_state.rs  bundles.rs  exit_cleanup.rs  mod.rs  plugin.rs  projectile_bundle.rs  round.rs
src/barracks/: barracks_bundle.rs  mod.rs  spawn_agents.rs  spawn_barracks.rs
src/level/: level_config.rs  level_plugin.rs  level_state.rs  mod.rs
src/misc/: damage.rs  despawn.rs  health.rs  math.rs  mod.rs  team.rs  team_count.rs  timed_destroy.rs  velocity.rs
src/physics/: collider_bundle.rs  mod.rs
src/ranged_attack/: mod.rs  projectile_bundle.rs  ranged_attack.rs  ranged_attack_scorer.rs  ranged_weapon.rs
src/seek/: mod.rs  seek.rs  seek_enemy.rs  seek_healer.rs
src/team/: mod.rs  team_assets.rs  team_count.rs  team_id.rs  team_utils.rs  unit.rs  unit_count.rs
src/ui/: main_menu.rs  mod.rs  setup_ui.rs
test/: mod.rs  sweet.rs  test.rs
test/app/: level.rs  lifecycle.rs  main_menu.rs  mod.rs  run.rs
test/utils/: hash.rs  mod.rs
