[package]
name = "war_trance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bevy = "0.11.3"
bevy_health_bar3d = "1.4.4"
bevy_rapier3d = { version = "0.22.0", features = ["debug-render-3d"] }
extend = "1.2.0"
forky_play = { path = "../forky/crates/forky/forky_play" }
gamai = { path = "../forky/crates/gamai" }
rand = "0.8.5"

[dev-dependencies]
bevy_mod_debugdump = "0.8.0"
sweet = { path = "../forky/crates/sweet" }

[[example]]
name = "sweet"
path = "test/sweet.rs"
