[package]
name = "war_trance"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "f516de456be2b65572de1af6956d52157663b9cc" }
beet = { path = "../beet/crates/beet" }
# forky_core = { path = "../forky/crates/forky/forky_core" }
forky_bevy = { path = "../forky/crates/forky/forky_bevy" }
# forky_web = { path = "../forky/crates/forky/forky_web" }
sweet = { path = "../forky/crates/sweet", features = ["bevy"] }

log = "0.4"

[dev-dependencies]
